# kibbutznik

./: .gitignore  CONTRIBUTING.md  CRYPTO_ROADMAP.md  FINANCE.md  FINANCE_CRYPTO_OPTIONS.md  GIT.md  HN_POST.md  HN_todo.md  KBZ_LOGIC.md  LICENSE  OLLAMA_SETUP.md  OPS.md  QUICKREF.md  README.md  activate.sh  alembic.ini  pyproject.toml
agents/: agent.py  api_client.py  bench_llm.py  bot_runner.py  community_state.py  decision_engine.py  memory.py  memory_extractor.py  memory_formatter.py  orchestrator.py  persona.py  run_simulation.py  run_with_viewer.py  simulation_api.py  tkg_client.py
alembic/: env.py
app/: DESIGN.md  app.js  index.html  style.css
docs/: STAGE1_API.md  STAGE2_AGENTS.md  STAGE3_VIEWER.md
kibbutznik-mcp/: README.md  pyproject.toml
kibbutznik-mcp/src/kibbutznik_mcp/: __init__.py  server.py
landing/: 404.html  500.html  contact.html  ecosystem.html  guide.html  index.html  memory.html  robots.txt  sendmail.html  sitemap.xml  todo.html  welcome.html
scripts/: loadtest.sh  preview_proxy.py  replay.py  smoke_email.sh
tests/: conftest.py  test_actions.py  test_agent_secret.py  test_agents.py  test_api_tokens.py  test_artifact_service.py  test_artifacts_router.py  test_audit.py  test_auth.py  test_bot_runner.py  test_bots.py  test_comments.py  test_communities.py  test_contact.py  test_economy_handlers.py  test_email_service.py  test_export.py  test_financial_module_toggle.py  test_flags.py  test_global_error_handler.py  test_integration.py  test_invites.py  test_mcp_server.py  test_me_and_browse.py  test_member_service.py  test_memory.py  test_memory_extractor_tkg.py  test_metrics_closeness_routes.py  test_metrics_service.py  test_pulses.py  (+19 more)
(+148 files in other folders)
