[project]
name = "kibbutznik-mcp"
version = "0.1.0"
description = "Kibbutznik MCP server — expose Kibbutznik governance actions as tools for any MCP-compatible agent (Claude Desktop, Claude Code, Cursor, Zed, …)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
kibbutznik-mcp = "kibbutznik_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
